--- a/styles.css
+++ b/styles.css
@@ -101,7 +101,7 @@ header{
     padding: 10px;
     margin: 45px 45px 0px 45px;
     text-align: center;
-    height: 2100px;
+    height: auto;
     box-shadow: 0px 0px 7px black;
 }
 
