--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 }
 
 .fotoPersona{
-    width: 200px;
+    width: calc(100%-40%);
     height: 200px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px black;
@@ -61,7 +61,7 @@ header{
     padding: 10px;
     margin: 45px 45px 0px 45px;
     text-align: center;
-    height: 2100px;
+    height: auto;
     box-shadow: 0px 0px 7px black;
 }
 
@@ -72,6 +72,7 @@ header{
 }
 
 .dataset{
+    width: calc(100%-60%);
     margin-bottom: 70px;
 }
 
