--- a/styles.css
+++ b/styles.css
@@ -7,8 +7,8 @@
 }
 
 .fotoPersona{
-    width: calc(100%-40%);
-    height: 200px;
+    width: calc(100%-60%);
+    height: 150px;
     border-radius: 10px;
     box-shadow: 2px 2px 10px black;
     margin: 15px 45px;
@@ -43,11 +43,12 @@ header{
     padding: 10px;
     margin: 45px 45px 0px 45px;
     text-align: center;
-    height: 375px;
+    height: 40px;
     box-shadow: 0px 0px 7px black;
 }
 
 #teamDesc ol li{
+    margin-top: 20px;
     float: left;
     list-style: none;
 }
